--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" />
     <title>Assignment 1</title>
   </head>
+  <!-- Link to CSS sheet -->
+    <link rel="stylesheet" href="./css/style.css">
   
   <!-- Always shows a header, even in smaller screens. -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -55,6 +57,30 @@
   color: white;
 }
 
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+.top-right {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
 .centered {
   position: absolute;
   top: 50%;
@@ -66,14 +92,77 @@
 <body>
 
 <div class="container">
-  <img src="./images/lana.jpeg" alt="Lana" style="width:100%;"> 
-  <h2><div class="centered">A look into Lana Del Rey</div>
-  <h2 class="small">A look into Lana Del Rey.</h2>
+  <img src="./images/lana.jpeg" alt="Lana" style="width:100%;">
+  <div class="centered">A look into Lana Del Rey</div>
 </div>
 
  <!-- Slider with Starting Value -->
-				<center><h6>How much do you know about Lana Del Rey?</h6></center>
+				<center><h4 style="color:purple">How much do you know about Lana Del Rey?</h4></center>
 				<input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
+
+  <!-- Side by side images -->
+  
+<div class="row">
+  <div class="column">
+    <img src="./images/lana1985.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/lana2019.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/reydel.jpg" alt="Lana" style="width:100%">
+  </div>
+</div>
+<style>
+  body {
+  background-color: mistyrose;
+  font-family: times new roman;
+}
+
+.glow {
+  font-size: 80px;
+  color: #fff;
+  text-align: center;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+</style>
+  <h1 class="glow">Biography:</h1>
+
+  <center><h3>So who is Lana Del Rey anyway?</h3></center>
+  <center><p style="color:black">Lana Del Rey's music is raw and passionate, with a lot of nostalgia for America's past. Del Rey rose to stardom as Lana Del Rey in 2011 with a handmade music video for the song "Video Games," which she first performed under the name Lizzy Grant. Del Rey was chastised for her lack of sincerity when "Video Games" went viral; she's also been chastised for songs that emphasise female submissiveness and self-destruction. Her fan following is large, and she has sold millions of units.</p></center>
+
+  <center><h3>Pre-fame</h3></center>
+  <center><p>Lana Del Rey was born as Elizabeth Woolridge Grant in New York City on June 21, 1985. Del Rey began drinking regularly as a teenager in the little town of Lake Placid. She had gone to Catholic school, but because of her drinking, her parents sent her to Kent Institution, a boarding school in Connecticut. Although boarding school didn't completely cure her addiction, she was sober by the age of 18. Instead of immediately enrolling in college, she moved to Long Island to live with her aunt and uncle, where her uncle taught her to play the guitar. Despite enrolling at Fordham University in the Bronx to study philosophy, Del Rey's primary passion was music. This is when she started living her truth, and not someone else's.</p></center>
+
+  <center><h3>Albums</h3></center>
+  <center><h6>Lana Del Rey has thousands of unreleased songs and albums she never shared with the world, but has 9 albums that have been thoughtfully released to us</h6></center>
+  <center><ol>
+    <li>Lana Del Ray a.k.a Lizzy Grant</li>
+    <li>Born to Die</li>
+    <li>Paradise</li>
+    <li>Ultraviolence</li>
+    <li>Honeymoon</li>
+    <li>Lust for Life</li>
+    <li>Norman F****** Rockwell</li>
+    <li>Chemtrails over the Country Club</li>
+    <li>Blue Banisters
+  </ol></center>
+
+  
+
+  
+  
+  
         
   
     
