--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en-ca">
+  <head>
 <meta charset="utf-8">
     <meta name="description" content="My first Assignment">
     <meta name="keywords" content="immaculata, ics2o">
@@ -20,35 +20,22 @@
   <!-- Link to CSS sheet -->
     <link rel="stylesheet" href="./css/style.css">
   
-  <!-- Always shows a header, even in smaller screens. -->
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-      <!-- Title -->
-      <span class="mdl-layout-title">Lana Del Rey</span>
-      <!-- Add spacer, to align navigation to the right -->
-      <div class="mdl-layout-spacer"></div>
-      <!-- Navigation. We hide it in small screens. -->
-      <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="">Ultraviolence</a>
-        <a class="mdl-navigation__link" href="">Lust for Life</a>
-        <a class="mdl-navigation__link" href="">Norman F****** RockWell</a>
-      </nav>
-    </div>
-  </header>
+  <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Lana Del Rey</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Ultraviolence</a>
-      <a class="mdl-navigation__link" href="https://assign-01-html-css-js.braydenmacmill1.repl.co/ultraviolence.html">Link</a>
-      <a class="mdl-navigation__link" href="https://assign-01-html-css-js.braydenmacmill1.repl.co/lustforlife.html">Link</a>
-      <a class="mdl-navigation__link" href="https://assign-01-html-css-js.braydenmacmill1.repl.co/normanrockwell.html">Link</a>
+      <a class="mdl-navigation__link" href="https://assign-01-html-css-js.braydenmacmill1.repl.co/ultraviolence.html">Ultraviolence</a>
+      <a class="mdl-navigation__link" href="https://assign-01-html-css-js.braydenmacmill1.repl.co/lustforlife.html">Lust for Life</a>
+      <a class="mdl-navigation__link" href="https://assign-01-html-css-js.braydenmacmill1.repl.co/normanrockwell.html">Norman F****** Rockwell</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
     <div class="page-content"><!-- Your content goes here --></div>
   </main>
 </div>
+
+<!-- Getting text over an image --> 
 <style>
   
 .container {
@@ -88,8 +75,7 @@
   transform: translate(-50%, -50%);
 }
 </style>
-</head>
-<body>
+  <body>
 
 <div class="container">
   <img src="./images/lana.jpeg" alt="Lana" style="width:100%;">
@@ -113,6 +99,7 @@
     <img src="./images/reydel.jpg" alt="Lana" style="width:100%">
   </div>
 </div>
+  <!-- To get glowing text -->
 <style>
   body {
   background-color: mistyrose;
@@ -136,6 +123,8 @@
   }
 }
 </style>
+
+  <!-- Writing portion of this webpage -->
   <h1 class="glow">Biography:</h1>
 
   <center><h3>So who is Lana Del Rey anyway?</h3></center>
@@ -146,17 +135,78 @@
 
   <center><h3>Albums</h3></center>
   <center><h6>Lana Del Rey has thousands of unreleased songs and albums she never shared with the world, but has 9 albums that have been thoughtfully released to us</h6></center>
+
+  <!-- An ordered list -->
   <center><ol>
-    <li>Lana Del Ray a.k.a Lizzy Grant</li>
-    <li>Born to Die</li>
-    <li>Paradise</li>
-    <li>Ultraviolence</li>
-    <li>Honeymoon</li>
-    <li>Lust for Life</li>
-    <li>Norman F****** Rockwell</li>
-    <li>Chemtrails over the Country Club</li>
-    <li>Blue Banisters
+    <li>Lana Del Ray a.k.a Lizzy Grant ♛</li>
+    <li>Born to Die ♡</li>
+    <li>Paradise ✿</li>
+    <li>Ultraviolence ☼</li>
+    <li>Honeymoon ✯</li>
+    <li>Lust for Life ✞</li>
+    <li>Norman F****** Rockwell ✯</li>
+    <li>Chemtrails over the Country Club ♥</li>
+    <li>Blue Banisters ❅</li>
   </ol></center>
+
+  <!-- Adding a JavaScript alert -->
+
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script>
+      function myButtonClicked() {
+        alert("I urge you to start listening to Lana!")
+      }
+    </script>
+
+  <!-- Colored raised button -->
+		<center><button onclick="myButtonClicked()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+		  Urgent message!
+		</button></center>
+		<br></br>
+
+  <!-- Another image for aesthetic -->
+
+  <center><h5>Collage of Lana Albums</h5></center>
+  <center><img src="./images/collageoflanaalbums.jpeg" width="800" length="950"></center>
+
+  <!-- A table -->
+  <center><h2>Here is a table</h2></center>
+        <center><h6>This table is showcasing my 3 favourite Lana albums, featuring my favourite song off of the album, my least favourite song, and her most popular song off the album</h6></center>
+ <center><table border="1">
+          <tr>
+            <th>Album name</th>
+            <th>Favourite song</th>
+            <th>Least favourite song</th>
+            <th>Most popular song!</th>
+          </tr>
+          <tr>
+            <td>Ultraviolence</td>
+            <td>Old Money</td>
+            <td>Guns and Roses</td>
+            <td>Brooklyn Baby or West Coast</td>
+          </tr>
+          <tr>
+            <td>Norman F****** Rockwell</td>
+            <td>Cinnamon Girl</td>
+            <td>F*** it I love you</td>
+            <td>Doin' Time</td>
+          </tr>
+          <tr>
+            <td>Lust for Life</td>
+            <td>Love</td>
+            <td>Summer Bummer</td>
+            <td>Cherry</td>
+          </tr>
+         </table></center>
+
+     <center><h6>These 3 albums have defined and shaped me towards who I am today. Therefore, these 3 albums will be the center of attention for this assigment and each webpage will feature Ultraviolence, Lust for Life and Norman F****** Rockwell.</h6></center>
+
+    <!-- Another image -->
+    <center><img src="./images/enjoy.png" width="200" length="300"></center>
+  </body>
+</html>
+
+  
 
   
 
