completed ultraviolence.html and tweeked index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <div class="container">
   <img src="./images/lana.jpeg" alt="Lana" style="width:100%;">
-  <div class="centered">A look into Lana Del Rey</div>
+  <h2 style="color:white"><font face="Times New Roman"><div class="centered">A look into Lana Del Rey</div></h2>
 </div>
 
  <!-- Slider with Starting Value -->
@@ -121,7 +121,6 @@
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
-}
 </style>
 
   <!-- Writing portion of this webpage -->
@@ -170,7 +169,7 @@
   <center><img src="./images/collageoflanaalbums.jpeg" width="800" length="950"></center>
 
   <!-- A table -->
-  <center><h2>Here is a table</h2></center>
+  <center><h2 style="background-color:palevioletred">Here is a table</h2></center>
         <center><h6>This table is showcasing my 3 favourite Lana albums, featuring my favourite song off of the album, my least favourite song, and her most popular song off the album</h6></center>
  <center><table border="1">
           <tr>
