--- a/ultraviolence.html
+++ b/ultraviolence.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en-ca">
+  <head>
 <meta charset="utf-8">
     <meta name="description" content="My first Assignment">
     <meta name="keywords" content="immaculata, ics2o">
@@ -16,4 +16,107 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" />
     <title>Assignment 1</title>
+    <!-- Link to CSS sheet -->
+    <link rel="stylesheet" href="./css/style2.css">
   </head>
+  <body>
+
+    <!-- Text over image -->
+<div class="container">
+  <img src="./images/ultraviolence.jpg" alt="Lana" style="width:100%;">
+  <h2 style="color:white"><font face="Times New Roman"><div class="centered">A look into Lana Del Rey</div></h2>
+  
+  <!-- Working alongside style2.css -->
+  <style>
+  body {
+  background-color: darkmagenta;
+  font-family: times new roman;
+}
+ </style>
+</div>
+    <!-- Glowing header -->
+     <h1 class="glow">What is Ultraviolence?</h1>
+
+    <!-- Text description -->
+    <center><p style="color:white">Lana Del Rey's third studio album, Ultraviolence, was released on June 13, 2014, and is her third studio album. She began planning the follow-up to her major-label debut Born to Die (2012) in 2013, despite first doubting the prospect of doing so due to ongoing criticism. The regular version of Ultraviolence has 11 tracks, while the deluxe version has 15 songs. The album's general tone is dark, gloomy, and enticing. Many people have criticised it for "glamorising" domestic violence, but that is not what I believe it is about, and her production and songwriting on this album is truly fantastic. Ultraviolence is an excellent record for any depressed adolescent, which is why I adore it and keep it on my shelf (quite literally, I have it on vinyl). I worship this album to be honest.</p></center>
+
+    <center><h2 style="background-color:midnightblue;">🌹 Track List 🌹</h2></center>
+    <!-- Ordered list -->
+    <center><ol>
+      <li>Cruel World</li>
+      <li>Ultraviolence</li>
+      <li>Shades of Cool</li>
+      <li>Brooklyn Baby</li>
+      <li>West Coast</li>
+      <li>Sad Girl</li>
+      <li>Pretty When You Cry</li>
+      <li>Money Power Glory</li>
+      <li>F****d My Way Up To the Top</li>
+      <li>Old Money</li>
+      <li>The Other Woman</li>
+      <li>Black Beauty</li>
+      <li>Guns and Roses</li>
+      <li>Florida Kilos</li>
+      <li>Is This Happiness</li>
+    </ol></center>
+
+    <!-- Side by side images -->
+  
+<div class="row">
+  <div class="column">
+    <img src="./images/ultra.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/darkultra.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/lightultra.jpg" alt="Lana" style="width:100%">
+  </div>
+</div>
+
+    <!-- Cool transparent image -->
+    <center><img src="./images/music.png"></center>
+  
+    <!-- Inserting a Gif -->
+    <center><img src="./images/lanaultra.gif"></center>
+
+    <!-- Adding a Javascript alert -->
+    
+  <script src="./js/script.js"></script>
+    <div id="Assign-01"></div>
+    <br>
+    <center><button onclick="myButtonClicked()">Wait, press me!! </button></center>
+
+    <!-- Header -->
+    <center><h1 style="background-color:steelblue"><font face="Garamond">My favourite songs:</font></h1></center>
+
+    <!-- Icon List -->
+
+<ul class="demo-list-icon mdl-list">
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    Brooklyn Baby
+</span>
+  </li>
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    West Coast
+  </span>
+  </li>
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    Old Money
+  </span>
+  </li>
+</ul>
+
+    <!-- Link back to home page -->
+    <center><h6>
+      Here is the link that will take you back to to my <a href="./index.html">Home WebPage</a>
+    </h6></center>
+  </body>
+</html>
+    
