updated normanrockwell.html and lustforlife.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <li>Blue Banisters ❅</li>
   </ol></center>
 
-  <!-- Adding a JavaScript alert -->
+  <!-- Adding a MDL button/JavaScript alert -->
 
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script>
