--- a/normanrockwell.html
+++ b/normanrockwell.html
@@ -16,4 +16,52 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" />
     <title>Assignment 1</title>
+  <!-- Link to CSS sheet -->
+    <link rel="stylesheet" href="./css/style4.css">
   </head>
+  <body>
+    <!-- Text over image -->
+<div class="container">
+  <img src="./images/nfr.jpg" alt="Lana" style="width:100%;">
+  <h2 style="color:white"><font face="Times New Roman"><div class="centered">A look into Lana Del Rey</div></h2>
+</div>
+
+    <!-- Glowing header -->
+     <h1 class="glow">What is Norman F****** Rockwell?</h1>
+
+    <!-- Text description -->
+    <center><p style="color:black">Lana Del Rey's sixth studio album, Norman F****** Rockwell!, was released on August 30, 2019. Her and Jack Antonoff (Taylor Swift, Lorde, Clairo) produced the album together.  Norman F****** Rockwell! has a soft rock vibe, including psychedelic jams and piano ballads, as well as tributes to different vintage rock bands. The album's title is a nod to Norman Rockwell, a painter and artist. Norman F****** Rockwell! garnered a lot of praise and was nominated for Album of the Year at the 62nd Annual Grammy Awards, as well as Song of the Year for the title track. It was named one of the best albums of the decade by various magazines, and in the years following its release, it has become one of the most admired albums in the entire world. It is Lana's most popular album, and loved by all due to the fierce production and the rich songwriting. This record has 14 tracks. It is a masterpiece from start to finish, as per usual with Lana.</p>
+
+      <center><h2 style="background-color:greenyellow;">🌼 Track List 🌼</h2></center>
+    <!-- Ordered List -->
+      <center><ol>
+      <li>Norman F****** Rockwell</li>
+      <li>Mariners Apartment Complex</li>
+      <li>Venice B****</li>
+      <li>F*** it I love you</li>
+      <li>Doin' Time</li>
+      <li>Love Song</li>
+      <li>Cinnamon Girl</li>
+      <li>How to disappear</li>
+      <li>California</li>
+      <li>The Next Best American Record</li>
+      <li>The greatest</li>
+      <li>Bartender</li>
+      <li>Happiness is a butterfly</li>
+      <li>hope is a dangerous thing for a woman like me to have - but I have it</li>
+    </ol></center>
+
+      <!-- Side by side images -->
+  
+<div class="row">
+  <div class="column">
+    <img src="./images/nfrphoto.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/norman.png" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/beautiful.jpg" alt="Lana" style="width:100%">
+  </div>
+</div>
+    
