--- a/lustforlife.html
+++ b/lustforlife.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en-ca">
+  <head>
 <meta charset="utf-8">
     <meta name="description" content="My first Assignment">
     <meta name="keywords" content="immaculata, ics2o">
@@ -16,4 +16,134 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" />
     <title>Assignment 1</title>
+
+  <!-- Link to CSS sheet -->
+    <link rel="stylesheet" href="./css/style3.css">
   </head>
+  <body>
+
+    <!-- Text over image -->
+<div class="container">
+  <img src="./images/lfl.jpg" alt="Lana" style="width:100%;">
+  <h2 style="color:white"><font face="Times New Roman"><div class="centered">A look into Lana Del Rey</div></h2>
+</div>
+
+  <!-- Glowing header -->
+     <h1 class="glow">What is Lust for Life?</h1>
+
+  <!-- Text description -->
+    <center><p style="color:white">Lana Del Rey's fifth studio album, Lust for Life, was released on July 21, 2017. Music critics praised Lust for Life, and it was nominated for a Grammy Award in the category of Best Pop Vocal Album at the 60th Annual Grammy Awards, marking Del Rey's second nomination in the area. Lana went on her fourth solo concert tour, named LA to the Moon Tour, in January 2018 to promote the record. The album's general mood is futuristic, seductive, melancoly and has a hip-hop influence on certain songs. Lust for Life has 16 tracks, all in which can either make you dance like a maniac or cry until you start to choke... this is probably my favourite Lana record out of the three!</p>
+
+    <center><h2 style="background-color:plum;">🌸 Track List 🌸</h2></center>
+    <!-- Ordered List -->
+      <center><ol>
+      <li>Love</li>
+      <li>Lust for Life (feat. The Weeknd)</li>
+      <li>13 Beaches</li>
+      <li>Cherry</li>
+      <li>White Mustang</li>
+      <li>Summer Bummer (feat. A$AP Rocky & Playboi Carti)</li>
+      <li>Groupie Love (feat. A$AP Rocky)</li>
+      <li>In My Feelings</li>
+      <li>Coachella - Woodstock In My Mind</li>
+      <li>God Bless America - And All the Beautiful Woman In It</li>
+      <li>When the World Was at War We Kept Dancing</li>
+      <li>Beautiful People Beautiful Problems (feat. Stevie Nicks)</li>
+      <li>Tomorrow Never Came (feat. Sean Ono Lennon)</li>
+      <li>Heroin</li>
+      <li>Change</li>
+      <li>Get Free</li>
+    </ol></center>
+
+      <!-- Side by side images -->
+  
+<div class="row">
+  <div class="column">
+    <img src="./images/lanalfl.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/lflphoto.jpg" alt="Lana" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="./images/lanaweek.jpg" alt="Lana" style="width:100%">
+  </div>
+</div>
+
+      <!-- Slider with Starting Value -->
+				<center><h4 style="color:purple">This album's aesthetic is beautiful, how would you rate it?</h4></center>
+			<input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
+
+      <!-- Header -->
+      <center><h2 style="background-color:lightseagreen"><font face="Garamond">Woah not so fast! Before you scroll, take a look below :)</font></h2></center>
+      
+      <!-- Square card -->
+
+<style>
+.demo-card-square.mdl-card {
+  width: 320px;
+  height: 320px;
+}
+.demo-card-square > .mdl-card__title {
+  color: #EE82EE;
+  background:
+    url('./images/lanaart.jpg') bottom right 15% no-repeat #46B6AC;
+}
+</style>
+
+<div class="demo-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand">
+    <h2 class="mdl-card__title-text">A Message</h2>
+  </div>
+  <div class="mdl-card__supporting-text">
+    So far, do you think you would like Ultraviolence or Lust for Life more?
+  </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Vote Below :)
+    </a>
+  </div>
+</div>
+
+      <!-- Radio button -->
+      <h5 style="color:teal"><font face="Times New Roman">Based off of aesthetic, do you prefer Ultraviolence or Lust for Life?</font></h5>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
+          <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
+          <span class="mdl-radio__label">Ultraviolence</span>
+        </label>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
+          <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
+          <span class="mdl-radio__label">Lust for Life</span>
+        </label>
+
+      <!-- Header -->
+    <center><h1 style="background-color:aquamarine"><font face="Garamond">My favourite songs:</font></h1></center>
+
+    <!-- Icon List -->
+
+<ul class="demo-list-icon mdl-list">
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    Love
+</span>
+  </li>
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    13 Beaches
+  </span>
+  </li>
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    Get Free
+  </span>
+  </li>
+</ul>
+
+      <!-- Link back to home page -->
+    <center><h6>
+      Here is the link that will take you back to to my <a href="./index.html">Home WebPage</a>
+    </h6></center>
+  </body>
+</html>
