"finished" normanrockwell.html

--- a/normanrockwell.html
+++ b/normanrockwell.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en-ca">
+  <head>
 <meta charset="utf-8">
     <meta name="description" content="My first Assignment">
     <meta name="keywords" content="immaculata, ics2o">
@@ -64,4 +64,45 @@
     <img src="./images/beautiful.jpg" alt="Lana" style="width:100%">
   </div>
 </div>
+
+      <!-- Random images -->
+  <img src="./images/watercolour.png" width="400" length="500">
+  <img src="./images/sailboat.png" width="200" length="300">
+
+      <h1 style="background-color:mediumaquamarine"><font face="Garamond">Lana is beautiful and ethereal</font></h1>
+      
+      <img src="./images/paintinglana.gif" width="800" length="950">
+
+      <!-- Header -->
+    <center><h1 style="background-color:darkseagreen"><font face="Garamond">My favourite songs:</font></h1></center>
+
+    <!-- Icon List -->
+
+<ul class="demo-list-icon mdl-list">
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    Mariners Apartment Complex
+</span>
+  </li>
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    Cinnamon Girl (my favourite song in existence)
+  </span>
+  </li>
+  <li class="mdl-list__item">
+    <span class="mdl-list__item-primary-content">
+    <i class="material-icons mdl-list__item-icon">star</i>
+    California
+  </span>
+  </li>
+</ul>
+
+      <!-- Link back to home page -->
+    <center><h6>
+      Here is the link that will take you back to to my <a href="./index.html">Home WebPage</a>
+    </h6></center>
+  </body>
+</html>
     
