--- a/normanrockwell.html
+++ b/normanrockwell.html
@@ -99,6 +99,13 @@
   </li>
 </ul>
 
+      <!-- Adding a Javascript alert -->
+    
+  <script src="./js/script2.js"></script>
+    <div id="Assign-01"></div>
+    <br>
+    <center><button onclick="myButtonClicked()">Surprise, you can run but you can't hide! </button></center>
+
       <!-- Link back to home page -->
     <center><h6>
       Here is the link that will take you back to to my <a href="./index.html">Home WebPage</a>
