--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" />
     <title>Assignment 1</title>
-  </head>
-  <!-- Link to CSS sheet -->
+    <!-- Link to CSS sheet -->
     <link rel="stylesheet" href="./css/style.css">
+  </head>
   
   <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
@@ -36,45 +36,6 @@
 </div>
 
 <!-- Getting text over an image --> 
-<style>
-  
-.container {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-
-.bottom-left {
-  position: absolute;
-  bottom: 8px;
-  left: 16px;
-}
-
-.top-left {
-  position: absolute;
-  top: 8px;
-  left: 16px;
-}
-
-.top-right {
-  position: absolute;
-  top: 8px;
-  right: 16px;
-}
-
-.bottom-right {
-  position: absolute;
-  bottom: 8px;
-  right: 16px;
-}
-
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-</style>
   <body>
 
 <div class="container">
@@ -99,35 +60,12 @@
     <img src="./images/reydel.jpg" alt="Lana" style="width:100%">
   </div>
 </div>
-  <!-- To get glowing text -->
-<style>
-  body {
-  background-color: mistyrose;
-  font-family: times new roman;
-}
-
-.glow {
-  font-size: 80px;
-  color: #fff;
-  text-align: center;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-</style>
 
   <!-- Writing portion of this webpage -->
   <h1 class="glow">Biography:</h1>
 
   <center><h3>So who is Lana Del Rey anyway?</h3></center>
-  <center><p style="color:black">Lana Del Rey's music is raw and passionate, with a lot of nostalgia for America's past. Del Rey rose to stardom as Lana Del Rey in 2011 with a handmade music video for the song "Video Games," which she first performed under the name Lizzy Grant. Del Rey was chastised for her lack of sincerity when "Video Games" went viral; she's also been chastised for songs that emphasise female submissiveness and self-destruction. Her fan following is large, and she has sold millions of units.</p></center>
+  <center><p style="color:black">Lana Del Rey's music is raw and passionate, with a lot of nostalgia for America's past. Del Rey rose to stardom as Lana Del Rey in 2011 with a handmade music video for the song "Video Games," which she first performed under the name Lizzy Grant. Del Rey was chastised for her lack of sincerity when "Video Games" went viral; she's also been chastised for songs that emphasize female submissiveness and self-destruction. Her fan following is large, and she has sold millions of units.</p></center>
 
   <center><h3>Pre-fame</h3></center>
   <center><p>Lana Del Rey was born as Elizabeth Woolridge Grant in New York City on June 21, 1985. Del Rey began drinking regularly as a teenager in the little town of Lake Placid. She had gone to Catholic school, but because of her drinking, her parents sent her to Kent Institution, a boarding school in Connecticut. Although boarding school didn't completely cure her addiction, she was sober by the age of 18. Instead of immediately enrolling in college, she moved to Long Island to live with her aunt and uncle, where her uncle taught her to play the guitar. Despite enrolling at Fordham University in the Bronx to study philosophy, Del Rey's primary passion was music. This is when she started living her truth, and not someone else's.</p></center>
@@ -148,7 +86,7 @@
     <li>Blue Banisters ❅</li>
   </ol></center>
 
-  <!-- Adding a MDL button/JavaScript alert -->
+  <!-- Adding a MDL button -->
 
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script>
@@ -198,7 +136,7 @@
           </tr>
          </table></center>
 
-     <center><h6>These 3 albums have defined and shaped me towards who I am today. Therefore, these 3 albums will be the center of attention for this assigment and each webpage will feature Ultraviolence, Lust for Life and Norman F****** Rockwell.</h6></center>
+     <center><h6>These 3 albums have defined and shaped me towards who I am today. Therefore, these 3 albums will be the center of attention for this assignment and each webpage will feature Ultraviolence, Lust for Life and Norman F****** Rockwell.</h6></center>
 
     <!-- Another image -->
     <center><img src="./images/enjoy.png" width="200" length="300"></center>
