--- a/lustforlife.html
+++ b/lustforlife.html
@@ -32,7 +32,7 @@
      <h1 class="glow">What is Lust for Life?</h1>
 
   <!-- Text description -->
-    <center><p style="color:white">Lana Del Rey's fifth studio album, Lust for Life, was released on July 21, 2017. Music critics praised Lust for Life, and it was nominated for a Grammy Award in the category of Best Pop Vocal Album at the 60th Annual Grammy Awards, marking Del Rey's second nomination in the area. Lana went on her fourth solo concert tour, named LA to the Moon Tour, in January 2018 to promote the record. The album's general mood is futuristic, seductive, melancoly and has a hip-hop influence on certain songs. Lust for Life has 16 tracks, all in which can either make you dance like a maniac or cry until you start to choke... this is probably my favourite Lana record out of the three!</p>
+    <center><p style="color:white">Lana Del Rey's fifth studio album, Lust for Life, was released on July 21, 2017. Music critics praised Lust for Life, and it was nominated for a Grammy Award in the category of Best Pop Vocal Album at the 60th Annual Grammy Awards, marking Del Rey's second nomination in the area. Lana went on her fourth solo concert tour, named LA to the Moon Tour, in January 2018 to promote the record. The album's general mood is futuristic, seductive, melancholy and has a hip-hop influence on certain songs. Lust for Life has 16 tracks, all in which can either make you dance like a maniac or cry until you start to choke... this is probably my favourite Lana record out of the three!</p>
 
     <center><h2 style="background-color:plum;">🌸 Track List 🌸</h2></center>
     <!-- Ordered List -->
@@ -76,7 +76,7 @@
       <!-- Header -->
       <center><h2 style="background-color:lightseagreen"><font face="Garamond">Woah not so fast! Before you scroll, take a look below :)</font></h2></center>
       
-      <!-- Square card -->
+      <!-- Square card (this style part must be in index.html and style3.css in order to work! ) -->
 
 <style>
 .demo-card-square.mdl-card {
