--- a/normanrockwell.html
+++ b/normanrockwell.html
@@ -106,6 +106,8 @@
     <br>
     <center><button onclick="myButtonClicked()">Surprise, you can run but you can't hide! </button></center>
 
+    
+      <h6>I really hope you enjoyed my website, I had such fun making it. Who knew I could make a crafty coder lol</h6>
       <!-- Link back to home page -->
     <center><h6>
       Here is the link that will take you back to to my <a href="./index.html">Home WebPage</a>
